--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.commons-csv-1.5.jar=lib/commons-csv-1.5.jar
+file.reference.kotlin-runtime.jar=nulllib\\kotlin-runtime.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -58,6 +59,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+kotlinc.classpath=${file.reference.kotlin-runtime.jar}
 main.class=Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
